@@ -1,0 +1,84 @@
+<?
+	include "include/config.inc";
+	$page["title"] = "Latest values";
+	$page["file"] = "latest.html";
+	show_header($page["title"],0,0);
+?>
+
+<?
+	show_table_header_begin();
+	$result=DBselect("select description from items where itemid=$itemid");
+	echo "TRENDS [",DBget_field($result,0,0),"]";
+
+	show_table_v_delimiter();
+
+	echo "<font size=2>";
+
+	if(isset($type)&&$type=="yearly")
+	{
+		echo "<b>[<a href='trends.html?itemid=$itemid&type=yearly'>yearly</a>]</b> ";
+	}
+	else
+	{
+		echo "<a href='trends.html?itemid=$itemid&type=yearly'>yearly</a> ";
+	}
+	if(isset($type)&&$type=="monthly")
+	{
+		echo "<b>[<a href='trends.html?itemid=$itemid&type=monthly'>monthly</a>]</b> ";
+	}
+	else
+	{
+		echo "<a href='trends.html?itemid=$itemid&type=monthly'>monthly</a> ";
+	}
+	if(isset($type)&&$type=="daily")
+	{
+		echo "<b>[<a href='trends.html?itemid=$itemid&type=daily'>daily</a>]</b> ";
+	}
+	else
+	{
+		echo "<a href='trends.html?itemid=$itemid&type=daily'>daily</a> ";
+	}
+	if(isset($type)&&$type=="hourly")
+	{
+		echo "<b>[<a href='trends.html?itemid=$itemid&type=hourly'>hourly</a>]</b> ";
+	}
+	else
+	{
+		echo "<a href='trends.html?itemid=$itemid&type=hourly'>hourly</a> ";
+	}
+	
+	echo "</font>";
+	show_table_header_end();
+	echo "<br>";
+?>
+
+<?
+	if(isset($itemid)&&isset($type))
+	{
+		show_table_header(strtoupper($type));
+	}
+	else
+	{
+		show_table_header("Select type of trend");
+	}
+	echo "<TABLE BORDER=0 COLS=4 WIDTH=\"100%\" BGCOLOR=\"#CCCCCC\" cellspacing=1 cellpadding=3>";
+	echo "<TR BGCOLOR=#EEEEEE>";
+	echo "<TR BGCOLOR=#DDDDDD>";
+	echo "<TD ALIGN=CENTER>";
+	if(isset($itemid)&&isset($type))
+	{
+		echo "<IMG SRC=\"trend.html?itemid=$itemid&type=$type\">";
+	}
+	else
+	{
+		echo "...";
+	}
+	echo "</TD>";
+	echo "</TR>";
+	echo "</TABLE>";
+
+?>
+
+<?
+	show_footer();
+?>
